# maxapi_calendar

./: LICENSE.txt  Makefile  README.md  example_bot.py  pyproject.toml  requirements.txt
maxapi_calendar/: __init__.py  common.py  schemas.py  simple_calendar.py
