[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxapi_calendar"
version = "0.1.0"
description = "Simple Inline Calendar & Date Selection tool for MaxAPI bots"
readme = "README.md"
authors = [{ name = "Vladislav Kvasov", email = "vladkvasov@gmail.com" }]
license = { file = "LICENSE.txt" }
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13'
]
keywords = ['MaxAPI', 'Bots', 'Calendar']
dependencies = [
    'maxapi>=0.9.18'
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/kvasovlad/maxapi_calendar"
